--- a/mentalemomemesmay2023/index.html
+++ b/mentalemomemesmay2023/index.html
@@ -59,8 +59,8 @@
             <!---------------------------------------------->
             <div data-aos="flip-up" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="1.jpg">
-                  <img src="1.jpg">
+                <a class="lightbox" href="1.jpeg">
+                  <img src="1.jpeg">
                 </a>
               </div>
             </div>
@@ -69,8 +69,8 @@
 
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="2.jpg">
-                  <img src="2.jpg">
+                <a class="lightbox" href="2.jpeg">
+                  <img src="2.jpeg">
                 </a>
               </div>
             </div>
@@ -78,8 +78,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="3.jpg">
-                  <img src="3.jpg">
+                <a class="lightbox" href="3.jpeg">
+                  <img src="3.jpeg">
                 </a>
 
               </div>
@@ -88,8 +88,8 @@
 
             <div data-aos="flip-up" data-aos-delay="60" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="4.jpg">
-                  <img src="4.jpg">
+                <a class="lightbox" href="4.jpeg">
+                  <img src="4.jpeg">
                 </a>
               </div>
             </div>
@@ -97,8 +97,8 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="5.jpg">
-                  <img src="5.jpg">
+                <a class="lightbox" href="5.jpeg">
+                  <img src="5.jpeg">
                 </a>
               </div>
             </div>
@@ -124,8 +124,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="8.jpg">
-                  <img src="8.jpg">
+                <a class="lightbox" href="8.jpeg">
+                  <img src="8.jpeg">
                 </a>
               </div>
             </div>
@@ -133,8 +133,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="9.jpg">
-                  <img src="9.jpg">
+                <a class="lightbox" href="9.jpeg">
+                  <img src="9.jpeg">
                 </a>
               </div>
             </div>
@@ -142,8 +142,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="10.jpg">
-                  <img src="10.jpg">
+                <a class="lightbox" href="10.jpeg">
+                  <img src="10.jpeg">
                 </a>
               </div>
             </div>
@@ -151,8 +151,8 @@
             <!---------------------------------------------->
             <div data-aos="flip-up" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="11.jpg">
-                  <img src="11.jpg">
+                <a class="lightbox" href="11.jpeg">
+                  <img src="11.jpeg">
                 </a>
               </div>
             </div>
@@ -161,8 +161,8 @@
 
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="12.jpg">
-                  <img src="12.jpg">
+                <a class="lightbox" href="12.jpeg">
+                  <img src="12.jpeg">
                 </a>
               </div>
             </div>
@@ -170,8 +170,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="13.jpg">
-                  <img src="13.jpg">
+                <a class="lightbox" href="13.jpeg">
+                  <img src="13.jpeg">
                 </a>
 
               </div>
@@ -180,8 +180,8 @@
 
             <div data-aos="flip-up" data-aos-delay="60" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="14.jpg">
-                  <img src="14.jpg">
+                <a class="lightbox" href="14.jpeg">
+                  <img src="14.jpeg">
                 </a>
               </div>
             </div>
@@ -189,8 +189,8 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="15.jpg">
-                  <img src="15.jpg">
+                <a class="lightbox" href="15.jpeg">
+                  <img src="15.jpeg">
                 </a>
               </div>
             </div>
@@ -198,8 +198,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="16.jpg">
-                  <img src="16.jpg">
+                <a class="lightbox" href="16.jpeg">
+                  <img src="16.jpeg">
                 </a>
               </div>
             </div>
@@ -207,8 +207,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="17.jpg">
-                  <img src="17.jpg">
+                <a class="lightbox" href="17.jpeg">
+                  <img src="17.jpeg">
                 </a>
               </div>
             </div>
@@ -216,8 +216,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="18.jpg">
-                  <img src="18.jpg">
+                <a class="lightbox" href="18.jpeg">
+                  <img src="18.jpeg">
                 </a>
               </div>
             </div>
@@ -225,8 +225,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="19.jpg">
-                  <img src="19.jpg">
+                <a class="lightbox" href="19.jpeg">
+                  <img src="19.jpeg">
                 </a>
               </div>
             </div>
@@ -234,8 +234,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="20.jpg">
-                  <img src="20.jpg">
+                <a class="lightbox" href="20.jpeg">
+                  <img src="20.jpeg">
                 </a>
               </div>
             </div>
@@ -243,8 +243,8 @@
             <!---------------------------------------------->
             <div data-aos="flip-up" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="21.jpg">
-                  <img src="21.jpg">
+                <a class="lightbox" href="21.jpeg">
+                  <img src="21.jpeg">
                 </a>
               </div>
             </div>
@@ -253,8 +253,8 @@
 
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="22.jpg">
-                  <img src="22.jpg">
+                <a class="lightbox" href="22.jpeg">
+                  <img src="22.jpeg">
                 </a>
               </div>
             </div>
@@ -262,8 +262,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="23.jpg">
-                  <img src="23.jpg">
+                <a class="lightbox" href="23.jpeg">
+                  <img src="23.jpeg">
                 </a>
 
               </div>
