--- a/spiritualmemes2023/index.html
+++ b/spiritualmemes2023/index.html
@@ -107,7 +107,7 @@
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
                 <a class="lightbox" href="6.jpeg">
-                  <img src="6.jpg">
+                  <img src="6.jpeg">
                 </a>
               </div>
             </div>
@@ -116,7 +116,7 @@
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
                 <a class="lightbox" href="7.jpeg">
-                  <img src="7.jpg">
+                  <img src="7.jpeg">
                 </a>
               </div>
             </div>
