--- a/spiritualmemes2023/index.html
+++ b/spiritualmemes2023/index.html
@@ -216,8 +216,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="18.jpg">
-                  <img src="18.jpg">
+                <a class="lightbox" href="18.JPG">
+                  <img src="18.JPG">
                 </a>
               </div>
             </div>
@@ -225,8 +225,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="19.jpg">
-                  <img src="19.jpg">
+                <a class="lightbox" href="19.JPG">
+                  <img src="19.JPG">
                 </a>
               </div>
             </div>
